# Process this file with automake to create Makefile.in

MAINTAINERCLEANFILES = Makefile.in

DISTCLEANFILES = types.h

includedir = @includedir@/openct

include_HEADERS = \
	apdu.h buffer.h conf.h device.h driver.h error.h ifd.h \
	logging.h openct.h protocol.h server.h socket.h tlv.h

sysincludedir = @sysincludedir@/openct

sysinclude_HEADERS = types.h
